[package]
name = "ezsockets-chat-client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.52"
#ezsockets = { path = "../../", features = ["client"] }
ezsockets = "0.3.0"
tokio = { version = "1.17.0", features = ["full"] }
tokio-tungstenite = { version = "0.17.1", optional = true }
tracing = "0.1.32"
tracing-subscriber = "0.3.9"
url = "2.2.2"
