[package]
name = "rust-restfull-api"
version = "0.1.0"
authors = ["focusdev"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
warp = "0.2"
parking_lot = "0.10.0"
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "0.2", features = ["macros"] }
#tokio = { version = "1.22.0", features = ["sync", "rt","rt-multi-thread", "macros", "time"] }
